--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>GR Pré Moldados Fortaleza - Blocos, Canaletas e Pré-Moldados CE</title>
     <meta name="title" content="GR Pré Moldados Fortaleza - Blocos, Canaletas e Pré-Moldados CE" />
     <meta name="description" content="GR Pré Moldados em Fortaleza-CE: Fabricante de blocos de concreto, canaletas e pré-moldados com 15+ anos de experiência. Qualidade superior para sua obra. Solicite orçamento!" />
-    <meta name="keywords" content="pré moldados fortaleza, blocos de concreto fortaleza, canaletas fortaleza, materiais de construção fortaleza, blocos estruturais ceará, pré moldados ce, construção civil fortaleza, blocos de vedação, lajes pré moldadas, vigas pré moldadas" />
+    <meta name="keywords" content="pré moldados fortaleza, blocos de concreto fortaleza, canaletas fortaleza, materiais de construção fortaleza, blocos estruturais ceará, pré moldados ce, construção civil fortaleza, blocos de vedação, lajes pré moldadas, vigas pré moldadas, pre moldados, blocos, paver, caneletas de concreto, pavers, meio bloco" />
     <meta name="author" content="GR Pré Moldados" />
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
     <meta name="language" content="Portuguese" />
