--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Primary Meta Tags -->
     <title>GR Pré Moldados Fortaleza - Blocos, Canaletas e Pré-Moldados CE</title>
     <meta name="title" content="GR Pré Moldados Fortaleza - Blocos, Canaletas e Pré-Moldados CE" />
-    <meta name="description" content="GR Pré Moldados em Fortaleza-CE: Fabricante de blocos de concreto, canaletas e pré-moldados com 15+ anos de experiência. Qualidade superior para sua obra. Solicite orçamento!" />
+    <meta name="description" content="GR Pré Moldados em Fortaleza-CE: Representante de fábricas de blocos de concreto, canaletas e pré-moldados. Conectamos sua obra aos melhores produtos certificados. Solicite orçamento!" />
     <meta name="keywords" content="pré moldados fortaleza, blocos de concreto fortaleza, canaletas fortaleza, materiais de construção fortaleza, blocos estruturais ceará, pré moldados ce, construção civil fortaleza, blocos de vedação, lajes pré moldadas, vigas pré moldadas, pre moldados, blocos, paver, caneletas de concreto, pavers, meio bloco" />
     <meta name="author" content="GR Pré Moldados" />
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
@@ -21,7 +21,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.grpremoldadosce.com.br/" />
     <meta property="og:title" content="GR Pré Moldados Fortaleza - Blocos, Canaletas e Pré-Moldados CE" />
-    <meta property="og:description" content="Fabricante de blocos de concreto, canaletas e pré-moldados com 15+ anos de experiência em Fortaleza-CE. Qualidade superior para sua obra!" />
+    <meta property="og:description" content="Representante de fábricas de blocos de concreto, canaletas e pré-moldados em Fortaleza-CE. Conectamos sua obra aos melhores produtos certificados!" />
     <meta property="og:image" content="https://www.grpremoldadosce.com.br/og-image.jpg" />
     <meta property="og:locale" content="pt_BR" />
     <meta property="og:site_name" content="GR Pré Moldados" />
@@ -30,7 +30,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://www.grpremoldadosce.com.br/" />
     <meta name="twitter:title" content="GR Pré Moldados Fortaleza - Blocos, Canaletas e Pré-Moldados CE" />
-    <meta name="twitter:description" content="Fabricante de blocos de concreto, canaletas e pré-moldados com 15+ anos de experiência em Fortaleza-CE. Qualidade superior para sua obra!" />
+    <meta name="twitter:description" content="Representante de fábricas de blocos de concreto, canaletas e pré-moldados em Fortaleza-CE. Conectamos sua obra aos melhores produtos certificados!" />
     <meta name="twitter:image" content="https://www.grpremoldadosce.com.br/og-image.jpg" />
     
     <!-- Favicon -->
@@ -50,7 +50,7 @@
       "@id": "https://www.grpremoldadosce.com.br/#business",
       "name": "GR Pré Moldados",
       "image": "https://www.grpremoldadosce.com.br/logo.jpg",
-      "description": "Fabricante de blocos de concreto, canaletas e pré-moldados com 15+ anos de experiência em Fortaleza-CE",
+      "description": "Representante e intermediador de fábricas de blocos de concreto, canaletas e pré-moldados certificados em Fortaleza-CE",
       "url": "https://www.grpremoldadosce.com.br/",
       "telephone": "+558592895924",
       "address": {
