colocando tag google ads

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17873278222"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-17873278222');
+    </script>
+    
     <!-- Primary Meta Tags -->
     <title>GR Pré Moldados Fortaleza - Blocos, Canaletas e Pré-Moldados CE</title>
     <meta name="title" content="GR Pré Moldados Fortaleza - Blocos, Canaletas e Pré-Moldados CE" />
